test/fixtures/public/fail/semantic/binop_incomp.jmm
/*  REASON:
    Incompatible types for binary operation.
*/

class T {
    public static void main(String[] a) { 
        int i;
        boolean j;
        int k;
        i = 0;
        j = true;
        k = i + j;
    }
}
